[metadata]
name = galaxy
author = Ansible, Inc.
author_email = support@ansible.com
description = Galaxy: Find, reuse and share the best Ansible content.
long_description = Galaxy is a web site and command line tool for creating
                   and sharing Ansible roles.
license = Apache-2.0
keywords = ansible galaxy
url = http://github.com/ansible/galaxy

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration

[options]
zip_safe = False
packages = find:
include_package_data = True

[options.package_data]
galaxy =
    importer/linters/yamllint.yaml
    templates/robots.txt
    templates/*.html
    templates/**/*.html

[tool:pytest]
# NOTE: This way won't work because env vars are already defined by compose
# DJANGO_SETTINGS_MODULE=..
# So instead of pytest-django we use pytest-env to override envvars forcefully
env =
    DJANGO_SETTINGS_MODULE=galaxy.settings.testing
    GALAXY_DB_URL=postgres://postgres:postgres@postgres:5432/galaxy
addopts =
    --cov galaxy
    --cov-report xml
    --cov-report term
    --cov-report html
    --cov-config setup.cfg

[coverage:run]
omit = */migrations/*

[flake8]
# W503 - line break before binary operator, to be replaced with W504.
#        Refer to https://github.com/PyCQA/pycodestyle/issues/498
ignore=W503
